--- a/first-assemblyNC/package.json
+++ b/first-assemblyNC/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/dev": "^0.1.0",
     "@expo-google-fonts/inter": "^0.1.0",
+    "@expo-google-fonts/lobster": "^0.1.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
@@ -21,6 +22,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-axios": "^0.17.1",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-linear-gradient": "^2.5.6",
