--- a/first-assemblyNC/package.json
+++ b/first-assemblyNC/package.json
@@ -23,6 +23,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-axios": "^0.17.1",
+    "react-native-dotenv": "^2.5.5",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-linear-gradient": "^2.5.6",
